ref: сделал часть доработок